<resources>
    <string name="app_name">Practico 1</string>
    <string name="title_activity_maps">Map</string>
    <string name="btn_Accept">Accept</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="txt_Operation">"The operation to solve is: "</string>
    <string name="txt_UserScore">"Your points are: "</string>
    <string name="cb_Article0">Icesi\'s pen (20 points)</string>
    <string name="cb_Article1">NoteBook (30 points)</string>
    <string name="cb_Article2">Icesi\'s Notebook (40 points)</string>
    <string name="cb_Article3">Icesi\'s shirt (80 points)</string>
    <string name="cb_Article4">Icesi\'s Jacket (100 points)</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong!</string>
    <string name="purchase">The purchase was made successfully!</string>
    <string name="notPurchase">The purchase could not be made due to insufficient points!</string>
</resources>
